token added try

--- a/ITC.InfoTrack/Areas/TokenGenerate/Views/TokenGenerate/TokenCreate.cshtml
+++ b/ITC.InfoTrack/Areas/TokenGenerate/Views/TokenGenerate/TokenCreate.cshtml
@@ -7,8 +7,9 @@
 
 @section styles{
     <!-- jquery.vectormap css -->
+    
     <link href="~/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css" />
-
+    
     <!-- DataTables -->
     <link href="~/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
 
@@ -35,7 +36,9 @@
             color: white;
         }
 
-    
+    .select2-container .select2-selection--single{
+        height:35px !important;
+    }
 
 </style>
 
@@ -46,40 +49,124 @@
             <div class="card-header">
                 <h5>Token Create</h5>
             </div>
-            <div class="card-body">              
+            <div class="card-body">
+                <div id="error"></div>
                 <div class="mt-4">
                     <div class="row g-3">
                         <div class="col-12 col-md-3">
+                            <label for="metaelementTitle" class="form-label">Type<span class="text-danger">*</span></label>
+                            @Html.DropDownList("typeId", ViewBag.type as SelectList, "Select Type", new { @class = "form-select", @id = "typeId", onchange="TypeWiseSource()" })
+
+                        </div>
+                        <div class="col-12 col-md-3">
                             <label for="districtSelect" class="form-label">District<span class="text-danger">*</span></label>
-                            <select class="form-select" name="district" id="districtSelect" data-width="fit">
-                                <option value="0">Select District</option>
-                                <option value="dhaka">Dhaka</option>
-                                <option value="chittagong">Chittagong</option>
-                                <option value="rajshahi">Rajshahi</option>
-                            </select>
+                            @Html.DropDownList("districtId", ViewBag.district as SelectList, "Select District", new { @class = "form-select", @id = "districtId"})
                         </div>
                         <div class="col-12 col-md-3">
                             <label for="metaelementTitle" class="form-label">Division<span class="text-danger">*</span></label>
-                            <select class="form-select" name="division" id="divisionSelect">
-                                <option value="0">Select Division</option>
-                            </select>
+                            @Html.DropDownList("divisionId", ViewBag.division as SelectList, "Select Division", new { @class = "form-select", @id = "divisionId" })
 
                         </div>
-                        <div class="col-12 col-md-3">
-                            <label for="metaelementTitle" class="form-label">Type<span class="text-danger">*</span></label>
-                            <select class="form-select" name="type">
-                                <option value="0">Select Type</option>
-                            </select>
-
-                        </div>
+                        
 
                         <div class="col-12 col-md-3">
                             <label for="metaelementTitle" class="form-label">Type Name<span class="text-danger">*</span></label>
-                            <select class="form-select" name="typename">
-                                <option value="0">Select TypeName</option>
+                            <select class="form-select" name="typename" id="typename" onchange="LoadData()">
+                                <option value="0">Select Type Name</option>
                             </select>
 
                         </div>
+                    </div>
+                </div>
+                <div class="mt-4">
+                    <div class="row">
+                        <div id="categorywisebranding"></div>
+                        <div class="container mt-5">
+                            <div class="table-responsive mt-4">
+                                <table class="table table-borderless table-striped" id="dataTable">
+                                    <thead>
+                                        <tr>
+                                            <th>Data</th>
+                                            <th>Select</th>
+                                            <th id="imageupload"></th>
+                                            <th>Comments</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Data 1</td>
+                                            <td>
+                                                <select class="form-select" id="yesNoSelect1">
+                                                    <option value="no">No</option>
+                                                    <option value="yes">Yes</option>
+                                                </select>
+                                            </td>
+                                            <td id="imageUploadCell1">
+                                                <div style="display: none;">
+                                                    <input class="form-control" type="file" id="imageUpload1" multiple>
+                                                    <div id="imagePreview1" class="d-flex flex-wrap gap-2 mt-2"></div>
+                                                </div>
+                                            </td>
+                                            <td id="commentsCell1">
+                                                <div style="display: none;">
+                                                    <textarea class="form-control" id="comments1" rows="1"></textarea>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Data 2</td>
+                                            <td>
+                                                <select class="form-select" id="yesNoSelect2">
+                                                    <option value="no">No</option>
+                                                    <option value="yes">Yes</option>
+                                                </select>
+                                            </td>
+                                            <td id="imageUploadCell2">
+                                                <div style="display: none;">
+                                                    <input class="form-control" type="file" id="imageUpload2" multiple>
+                                                    <div id="imagePreview2" class="d-flex flex-wrap gap-2 mt-2"></div>
+                                                </div>
+                                            </td>
+                                            <td id="commentsCell2">
+                                                <div style="display: none;">
+                                                    <textarea class="form-control" id="comments2" rows="1"></textarea>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        @* <table class="table">
+                            
+                           <tr>
+                               <th>Category</th>
+                           </tr>
+                            <tr>
+                                <td>data</td>
+                                <td>Yes/ No</td>
+                                <td>multiple Image Upload</td>
+                                <td>Comments</td>
+                            </tr>
+                            <tr>
+                                <td>data</td>
+                                <td>Yes/ No</td>
+                                <td>multiple Image Upload</td>
+                                <td>Comments</td>
+                            </tr>
+                            <tr>
+                                <td>data</td>
+                                <td>Yes/ No</td>
+                                <td>multiple Image Upload</td>
+                                <td>Comments</td>
+                            </tr>
+                            <tr>
+                                <td>data</td>
+                                <td>Yes/ No</td>
+                                <td>multiple Image Upload</td>
+                                <td>Comments</td>
+                            </tr>
+                        </table> *@
                     </div>
                 </div>
             </div>
@@ -103,6 +190,126 @@
     <script src="~/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
     <!-- App js -->
     <script src="~/js/app.js"></script>
-
+   
 }
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/libs/select2/js/select2.min.js"></script>
+
+
+ <script>
+      $('#typename').select2({
+            placeholder: "Select Type Name",
+            allowClear: true
+        });
+    function TypeWiseSource()
+    {
+        let typeId=$('#typeId').val();
+
+       $.ajax({
+               url: '/TokenGenerate/TokenGenerate/TypeWiseElementName',
+               type: 'GET',              
+               data: {typeId:typeId},
+               success: function (res) {
+                    if(res.status){
+                         const dropdown = $('#typename');
+                         dropdown.empty();
+                         dropdown.append('<option value="0">Select Type Name </option>');
+                         res.data.forEach(item => {
+                            // const selected = item.value == selectedGroupId ? 'selected' : '';
+                             dropdown.append(`<option value="${item.id}">${item.name}</option>`);
+                         });
+                    }else{
+                         const dropdown = $('#typename');
+                         dropdown.empty();
+                         dropdown.append('<option value="0"> Select Type Name </option>');
+                     }
+                   
+                 },
+                 error: function (err) {
+                  alert('Error while saving.');
+               }
+         });
+    }
+
+
+    function LoadData()
+    {
+        let typeName= $('#typename').val();
+        const error = document.getElementById('error');
+        //const error = document.getElementById('categorywisebranding');
+        let innerHTML='';
+        debugger;
+        if(typeName==='0'){
+            error.innerHTML =`
+             <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Error! </strong> Please Valid Type Name..
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            `;
+            document.getElementById('typename').focus();
+            return;
+        }
+        $.ajax({
+               url: '/TokenGenerate/TokenGenerate/TypeWiseTokenData',
+               type: 'GET',              
+               success: function (res) {
+                    if(res.status)
+                    {
+                        
+                    }
+
+                 },
+                 error: function (err) {
+                  alert('Error while saving.');
+               }
+        });
+    }
+
+     function setupRowLogic(rowNumber) {
+        const yesNoSelect = document.getElementById(`yesNoSelect${rowNumber}`);
+        const imageUploadDiv = document.getElementById(`imageUploadCell${rowNumber}`).firstElementChild;
+        const commentsDiv = document.getElementById(`commentsCell${rowNumber}`).firstElementChild;
+        const imageUploadInput = document.getElementById(`imageUpload${rowNumber}`);
+        const imagePreviewContainer = document.getElementById(`imagePreview${rowNumber}`);
+        const img=document.getElementById('imageupload');
+
+        // Handle Yes/No dropdown to show/hide fields
+        yesNoSelect.addEventListener('change', () => {
+            if (yesNoSelect.value === 'yes') {
+                img.innerText="Multiple Image ";
+                imageUploadDiv.style.display = 'block';
+                commentsDiv.style.display = 'block';
+            } else {
+                 img.innerText="";
+                imageUploadDiv.style.display = 'none';
+                commentsDiv.style.display = 'none';
+            }
+        });
+
+        // Handle image upload and create rounded previews
+        imageUploadInput.addEventListener('change', (event) => {
+            imagePreviewContainer.innerHTML = ''; // Clear previous previews
+            const files = event.target.files;
+
+            if (files) {
+                for (const file of files) {
+                    const reader = new FileReader();
+                    reader.onload = (e) => {
+                        const img = document.createElement('img');
+                        img.src = e.target.result;
+                        img.classList.add('rounded-circle', 'img-thumbnail'); // Apply rounded style
+                        img.style.width = '30px';
+                        img.style.height = '30px';
+                        img.style.objectFit = 'cover';
+                        imagePreviewContainer.appendChild(img);
+                    };
+                    reader.readAsDataURL(file);
+                }
+            }
+        });
+    }
+
+    // --- Apply the logic to each table row ---
+    setupRowLogic(1); // For the first row (Data 1)
+    setupRowLogic(2); // For the second row (Data 2)
+ </script>
