--- a/ITC.InfoTrack/Views/Shared/_title_meta.cshtml
+++ b/ITC.InfoTrack/Views/Shared/_title_meta.cshtml
@@ -5,3 +5,4 @@
 <meta content="Themesdesign" name="author" />
 <!-- App favicon -->
 <link rel="shortcut icon" href="~/images/favicon.ico">
+<link href="~/libs/select2/css/select2.min.css" rel="stylesheet" />
