--- a/ITC.InfoTrack/Areas/TokenGenerate/Views/TokenGenerate/CategoryWiseData.cshtml
+++ b/ITC.InfoTrack/Areas/TokenGenerate/Views/TokenGenerate/CategoryWiseData.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@model List<ITC.InfoTrack.Model.ViewModel.CategoryWiseDetailsDto>
+
+@{
     ViewBag.Title = "Category Wise Data";
     ViewBag.pTitle = "Category Wise Data";
     ViewBag.pageTitle = "InfoTrack";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
 }
 
 @section styles {
@@ -11,7 +14,8 @@
 
     <!-- DataTables -->
     <link href="~/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
-
+    <link href="~/libs/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/libs/datatables.net-select-bs4/css//select.bootstrap4.min.css" rel="stylesheet" type="text/css" />
     <!-- Responsive datatable examples -->
     <link href="~/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" />
 
@@ -64,24 +68,34 @@
                 </form>
                 <div class="row mt-4">
                     <div class="table-responsive">
-                        <table class="table table-striped table-hover">
+                        <table id="datatable" class="table table-striped table-hover">
                             <thead>
                                 <tr style="background: aliceblue;">
                                     <th>#</th>
                                     <th>Category</th>
                                     <th>Entity Name</th>
                                     <th>Create Date</th>
+                                    <th>Effective Date</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
+                                @foreach(var item in Model)
+                                {
+                                   
+                                    <tr>
+                                        <td>@i</td>
+                                        <td>@item.CategoryName</td>
+                                        <td>@item.Title</td>
+                                        <td>@item.CreateDate.ToString("dd-MMM-yyyy")</td>
+                                        <td>@item.ActiveDate.ToString("dd-MMM-yyyy")</td>
+                                        <td>
+                                            <a href="#" data-id="@item.Id" ><i class="fa fa-edit"></i></a>
+                                        </td>
+                                    </tr>
+                                    i++;
+                                }
+                                
                             </tbody>
                         </table>
                     </div>
@@ -98,15 +112,29 @@
 
 @section scripts {
     <!-- apexcharts -->
+    <!-- apexcharts -->
+    <!-- jquery.vectormap map -->
     <script src="~/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <script src="~/libs/admin-resources/jquery.vectormap/maps/jquery-jvectormap-us-merc-en.js"></script>
     <!-- Required datatable js -->
     <script src="~/libs/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="~/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <!-- Buttons examples -->
+    <script src="~/libs/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="~/libs/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+    <script src="~/libs/jszip/jszip.min.js"></script>
+    <script src="~/libs/pdfmake/build/pdfmake.min.js"></script>
+    <script src="~/libs/pdfmake/build/vfs_fonts.js"></script>
+    <script src="~/libs/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="~/libs/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="~/libs/datatables.net-buttons/js/buttons.colVis.min.js"></script>
+    <script src="~/libs/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
+    <script src="~/libs/datatables.net-select/js/dataTables.select.min.js"></script>
     <!-- Responsive examples -->
     <script src="~/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
     <script src="~/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
-    <!-- App js -->
+    <!-- Datatable init js -->
+    <script src="~/js/pages/datatables.init.js"></script>
     <script src="~/js/app.js"></script>
 
 }
